src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -89,23 +89,6 @@ MONGO_FP_DECLARE(WTWriteConflictExceptionForReads);
 
 const std::string kWiredTigerEngineName = "wiredTiger";
 
-class WiredTigerRecordStore::OplogInsertChange final : public RecoveryUnit::Change {
-public:
-    OplogInsertChange(WiredTigerOplogManager* om) : _om(om) {}
-
-    void commit() final {
-        _om->triggerJournalFlush();
-    }
-
-    void rollback() final {
-        // Trigger even on rollback since it might make later commits visible.
-        _om->triggerJournalFlush();
-    }
-
-private:
-    WiredTigerOplogManager* const _om;
-};
-
 class WiredTigerRecordStore::OplogStones::InsertChange final : public RecoveryUnit::Change {
 public:
     InsertChange(OplogStones* oplogStones,
@@ -689,7 +672,7 @@ WiredTigerRecordStore::~WiredTigerRecordStore() {
 
     if (_isOplog) {
         // Delete oplog visibility manager on KV engine.
-        _kvEngine->deleteOplogManager();
+        _kvEngine->haltOplogManager();
     }
 }
 
@@ -733,7 +716,7 @@ void WiredTigerRecordStore::postConstructorInit(OperationContext* opCtx) {
 
     if (_isOplog) {
         invariant(_kvEngine);
-        _kvEngine->initializeOplogManager(opCtx, _uri, this);
+        _kvEngine->startOplogManager(opCtx, _uri, this);
     }
 }
 
@@ -1130,12 +1113,6 @@ Status WiredTigerRecordStore::_insertRecords(OperationContext* opCtx,
     WT_CURSOR* c = curwrap.get();
     invariant(c);
 
-    if (_isOplog) {
-        // Register a change to notify the oplog journal flusher thread when this transaction
-        // finishes.
-        opCtx->recoveryUnit()->registerChange(new OplogInsertChange(_kvEngine->getOplogManager()));
-    }
-
     RecordId highestId = RecordId();
     dassert(nRecords != 0);
     for (size_t i = 0; i < nRecords; i++) {
@@ -1202,7 +1179,7 @@ StatusWith<RecordId> WiredTigerRecordStore::insertRecord(
 
 bool WiredTigerRecordStore::isOpHidden_forTest(const RecordId& id) const {
     invariant(id.repr() > 0);
-    invariant(_kvEngine->getOplogManager());
+    invariant(_kvEngine->getOplogManager()->isRunning());
     return _kvEngine->getOplogManager()->getOplogReadTimestamp() <
         static_cast<std::uint64_t>(id.repr());
 }
@@ -1504,7 +1481,7 @@ Status WiredTigerRecordStore::touch(OperationContext* opCtx, BSONObjBuilder* out
 
 void WiredTigerRecordStore::waitForAllEarlierOplogWritesToBeVisible(OperationContext* opCtx) const {
     auto oplogManager = _kvEngine->getOplogManager();
-    if (oplogManager) {
+    if (oplogManager->isRunning()) {
         oplogManager->waitForAllEarlierOplogWritesToBeVisible(this, opCtx);
     }
 }
