src/mongo/db/storage/wiredtiger/wiredtiger_record_store.h
@@ -277,7 +277,6 @@ protected:
 private:
     class RandomCursor;
 
-    class OplogInsertChange;
     class NumRecordsChange;
     class DataSizeChange;
 
